maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
val X = getLargeurMonde()-1
^ShortestPathMaze:2: error: expected class or object definition
val X = getLargeurMonde()-1
^ShortestPathMaze:3: error: expected class or object definition
val Y = getHauteurMonde()-1
^ShortestPathMaze:5: error: expected class or object definition
def toutMarque():Boolean = {
^ShortestPathMaze:21: error: expected class or object definition
def dirMinimale(x,y):Direction {
^ShortestPathMaze:35: error: expected class or object definition
def marquerAutour(x:Int,y:Int,indice:Int) {
^ShortestPathMaze:43: error: expected start of definition
override def run() {
         ^